[gd_scene load_steps=8 format=3 uid="uid://dy874dor8f61i"]

[ext_resource type="Script" path="res://Scenes/Enemies/car.gd" id="1_a7kvm"]
[ext_resource type="Texture2D" uid="uid://djel8vj1dbgyn" path="res://graphics/car/main.png" id="1_cbxdi"]
[ext_resource type="Texture2D" uid="uid://cmh6dw5b5lmtm" path="res://graphics/car/turret.png" id="3_e5mp4"]
[ext_resource type="Texture2D" uid="uid://bsu8rjqw4856w" path="res://graphics/explosions/gun.png" id="4_0ebd5"]

[sub_resource type="CircleShape2D" id="CircleShape2D_j6nk4"]
radius = 820.586

[sub_resource type="Animation" id="Animation_m277n"]
resource_name = "laser_load"
length = 2.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Turret/RayCast2D/Line2D:width")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 1.9, 2),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0.0, 0.0, 10.0, 0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Turret/RayCast2D2/Line2D:width")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1, 1.9, 2),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0.0, 0.0, 10.0, 0.0]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(1.9),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"fire"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_t221w"]
_data = {
"laser_load": SubResource("Animation_m277n")
}

[node name="Car" type="PathFollow2D"]
script = ExtResource("1_a7kvm")

[node name="CharacterBody2D" type="CharacterBody2D" parent="."]
collision_layer = 2
collision_mask = 11

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="CharacterBody2D"]
polygon = PackedVector2Array(-181, -172, -111, -181, -46, -170, -40, -123, -8, -130, 42, -123, 53, -166, 126, -175, 197, -161, 231, -94, 233, 90, 194, 160, 163, 161, 117, 173, 55, 165, 36, 122, -10, 130, -41, 124, -48, 173, -109, 184, -183, 174, -189, 135, -175, 99, -188, 51, -231, 52, -252, 35, -251, -35, -228, -54, -184, -53, -181, -109, -189, -145)

[node name="NoticeArea" type="Area2D" parent="."]
collision_layer = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="NoticeArea"]
shape = SubResource("CircleShape2D_j6nk4")

[node name="MainSprite" type="Sprite2D" parent="."]
position = Vector2(46, 0)
rotation = 1.5708
texture = ExtResource("1_cbxdi")

[node name="Turret" type="Node2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="Turret"]
rotation = 1.5708
texture = ExtResource("3_e5mp4")

[node name="RayCast2D" type="RayCast2D" parent="Turret"]
position = Vector2(112, -28)
target_position = Vector2(706, 0)

[node name="Line2D" type="Line2D" parent="Turret/RayCast2D"]
points = PackedVector2Array(0, -2, 705, 0)
width = 0.0
default_color = Color(0.807843, 0, 0.419608, 0.509804)

[node name="RayCast2D2" type="RayCast2D" parent="Turret"]
position = Vector2(112, 32)
target_position = Vector2(706, 0)

[node name="Line2D" type="Line2D" parent="Turret/RayCast2D2"]
points = PackedVector2Array(0, -2)
width = 0.0
default_color = Color(0.807843, 0, 0.419608, 0.509804)

[node name="GunFire" type="Node2D" parent="Turret"]

[node name="GunFire1" type="Sprite2D" parent="Turret/GunFire"]
modulate = Color(1, 1, 1, 0)
position = Vector2(176, -27)
rotation = 1.5708
scale = Vector2(0.5, 0.5)
texture = ExtResource("4_0ebd5")

[node name="GunFire2" type="Sprite2D" parent="Turret/GunFire"]
modulate = Color(1, 1, 1, 0)
position = Vector2(176, 32)
rotation = 1.5708
scale = Vector2(0.5, 0.5)
texture = ExtResource("4_0ebd5")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_t221w")
}

[connection signal="body_entered" from="NoticeArea" to="." method="_on_notice_area_body_entered"]
[connection signal="body_exited" from="NoticeArea" to="." method="_on_notice_area_body_exited"]
